# cargo-modules

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  renovate.json  rust-toolchain  rustfmt.toml
.github/configs/: skywalking-eyes.yml
.github/workflows/: other.yml  rust.yml
docs/: dependencies_output.dot
modlib/: Cargo.toml
modlib/src/: analyzer.rs  graph.rs  item.rs  lib.rs  options.rs  tree.rs
modlib/src/graph/: builder.rs  walker.rs
modlib/src/item/: attr.rs  kind_display_name.rs  kind_ordering.rs  visibility.rs
modlib/src/tree/: builder.rs
src/: analyzer.rs  args.rs  builder.rs  colors.rs  command.rs  commands.rs  dependencies.rs  dot_printer.rs  error.rs  format.rs  generate.rs  graph.rs  item.rs  lib.rs  main.rs  manifest.rs  module.rs  ng.rs  options.rs  orphans.rs  printer.rs  runner.rs  structure.rs  target.rs  theme.rs  tree.rs  utils.rs  visit.rs  visitor.rs
src/colors/: cli.rs
src/command/: dependencies.rs  orphans.rs  structure.rs
src/command/dependencies/: builder.rs  command.rs  filter.rs  graph.rs  options.rs  printer.rs
src/command/orphans/: command.rs  options.rs  orphan.rs  printer.rs  scanner.rs  theme.rs
src/command/structure/: builder.rs  command.rs  filter.rs  options.rs  printer.rs  theme.rs  tree.rs
src/dependencies/: builder.rs  command.rs  filter.rs  graph.rs  options.rs  printer.rs  theme.rs  walker.rs
src/dependencies/cycles/: tri_color.rs
src/format/: cfg.rs  kind.rs  visibility.rs
src/generate/: command.rs  graph.rs  json.rs  tree.rs
src/graph/: builder.rs  command.rs  edge.rs  filter.rs  modules.rs  node.rs  options.rs  orphans.rs  printer.rs  tri_color.rs  util.rs  walker.rs
src/graph/cycles/: mod.rs  tri_color.rs
src/graph/node/: attr.rs  visibility.rs
src/item/: attr.rs  kind.rs  kind_display_name.rs  kind_ordering.rs  visibility.rs
src/ng/: analysis.rs  graph.rs  graph_printer.rs  mod.rs  tree_printer.rs
src/orphans/: command.rs  options.rs  orphan.rs  printer.rs  scanner.rs
src/printer/: graph.rs  json.rs  tree.rs
src/structure/: builder.rs  command.rs  filter.rs  options.rs  orphans.rs  printer.rs  theme.rs  tree.rs
src/theme/: graph.rs  tree.rs
src/tree/: builder.rs  command.rs  filter.rs  node.rs  options.rs  orphans.rs  printer.rs
test-projects/bin-and-lib/: Cargo.toml  build.rs
test-projects/bin-and-lib/src/: lib.rs  main.rs
test-projects/lib-no-edition/: Cargo.toml
test-projects/proc-macro/: Cargo.toml
test-projects/virtual-workspace/: Cargo.toml
test-projects/workspace/: Cargo.toml
test-projects/workspace/workspace-package/: Cargo.toml
test-resources/: example-bin-and-lib.json  example-bin.json  example-custom-build.json  example-edition-2015.json  example-edition-2018.json  example-lib-edition-2015.json  example-lib-edition-2018.json  example-lib-no-edition.json  example-lib.json  example-no-edition.json  example-plugin.json  example-proc-macro.json  example-virtual-workspace.json  example-workspace.json  generate-test-manifests.sh
test-resources/example-bin/: Cargo.toml
test-resources/example-lib-edition-2015/: Cargo.toml
test-resources/example-lib-edition-2018/: Cargo.toml
test-resources/example-lib-edition-2018/src/: lib.rs  submodule.rs
test-resources/example-plugin/: Cargo.toml
test-resources/project/test-lib/: Cargo.toml
tests/: dependencies.rs  general.rs  generate_graph.rs  generate_json.rs  generate_tree.rs  orphans.rs  structure.rs  util.rs
tests/auxiliaries/dependency/: Cargo.toml
tests/projects/enum_fields/: Cargo.toml
tests/projects/function_body/: Cargo.toml
tests/projects/function_inputs/: Cargo.toml
tests/projects/function_outputs/: Cargo.toml
tests/projects/github_issue_102/: Cargo.toml
tests/projects/github_issue_172/: Cargo.toml
tests/projects/no_orphans/: Cargo.toml
tests/snapshots/: dependencies__bin__fail__package_lib_target.snap  dependencies__bin__fail__package_multi_target.snap  dependencies__bin__fail__virtual_workspace_multi_package.snap  dependencies__bin__fail__virtual_workspace_single_package_lib_target.snap  dependencies__bin__fail__virtual_workspace_single_package_multi_target.snap  dependencies__bin__fail__workspace_multi_package.snap  dependencies__bin__fail__workspace_single_package_multi_target.snap  dependencies__bin__pass__virtual_workspace_single_package_bin_target.snap  dependencies__bin__pass__workspace_single_package_bin_target.snap  dependencies__bin__pass__workspace_single_package_multi_target.snap  dependencies__cfg_test__smoke.snap  dependencies__cfg_test__with_tests__smoke.snap  dependencies__cfg_test__without_tests__smoke.snap  dependencies__colors__ansi__smoke.snap  dependencies__colors__truecolor__smoke.snap  dependencies__default__fail__package_multi_target.snap  dependencies__default__fail__virtual_workspace_single_package_multi_target.snap  dependencies__default__fail__workspace_single_package_multi_target.snap  dependencies__default__pass__package_bin_target.snap  dependencies__default__pass__package_lib_target.snap  dependencies__default__pass__virtual_workspace_single_package_bin_target.snap  dependencies__default__pass__virtual_workspace_single_package_lib_target.snap  dependencies__default__pass__workspace_single_package_lib_target.snap  dependencies__externs__smoke.snap  dependencies__fields__enum_fields.snap  dependencies__fields__struct_fields.snap  dependencies__fields__tuple_fields.snap  dependencies__fields__union_fields.snap  dependencies__fns__smoke.snap  dependencies__focus_on__glob_path__smoke.snap  dependencies__focus_on__nonexistent_path__smoke.snap  dependencies__focus_on__self_path__smoke.snap  dependencies__focus_on__simple_path__smoke.snap  dependencies__focus_on__use_tree__smoke.snap  dependencies__functions__function_body.snap  dependencies__functions__function_inputs.snap  dependencies__functions__function_outputs.snap  dependencies__functions__smoke.snap  dependencies__github__issue_102__github_issue_102.snap  dependencies__github__issue_172__github_issue_172.snap  (+438 more)
(+58 files in other folders)
