[package]
authors = ["Vincent Esche <regexident@gmail.com>", "Hmvp <github@hmvp.nl>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "A cargo plugin for showing a tree-like overview of a crate's modules."
documentation = "https://docs.rs/crate/cargo-modules/"
homepage = "https://github.com/regexident/cargo-modules"
keywords = ["cargo", "plugin", "module", "mod", "tree"]
license = "MPL-2.0"
edition = "2021"
name = "cargo-modules"
readme = "README.md"
repository = "https://github.com/regexident/cargo-modules"
rust-version = "1.74.0"
version = "0.13.1"

[dependencies]

# required by lib
bitvec = "1.0"
json = "0.12.4"
petgraph = "0.6.4"
anyhow = "1.0.76"
yansi = "0.5.1"
log = "0.4.20"
env_logger = "0.10.1"
indoc = "2.0.4"
clap = { version = "4.4.11", features = ["derive"] }
scopeguard = "1.2.0"

ra_ap_base_db = "=0.0.190"
ra_ap_cfg = "=0.0.190"
ra_ap_hir = "=0.0.190"
ra_ap_hir_def = "=0.0.190"
ra_ap_hir_ty = "=0.0.190"
ra_ap_ide = "=0.0.190"
ra_ap_ide_db = "=0.0.190"
ra_ap_load-cargo = "=0.0.190"
ra_ap_paths = "=0.0.190"
ra_ap_proc_macro_api = "=0.0.190"
ra_ap_project_model = "=0.0.190"
ra_ap_syntax = "=0.0.190"
ra_ap_text_edit = "=0.0.190"
ra_ap_vfs = "=0.0.190"

# minimal versions
wyz = "0.6.1"
pulldown-cmark = "0.9.3"
getopts = "0.2.21"
rust-analyzer-salsa = "0.17.0-pre.4"        # resolving rust-analyzer = "=0.0.189"
rust-analyzer-salsa-macros = "0.17.0-pre.4" # resolving rust-analyzer = "=0.0.189"

# security fixes
memoffset = "0.9.0"    #230
thread_local = "1.1.7" #231

# required by tests
[dev-dependencies]
assert_cmd = "2.0.12"
shellwords = "1.1"
insta = "1.34.0"
bitflags = "2.4.1"
