[package]
authors = ["Vincent Esche <regexident@gmail.com>", "Hmvp <github@hmvp.nl>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "A cargo plugin for showing a tree-like overview of a crate's modules."
documentation = "https://docs.rs/crate/cargo-modules/"
homepage = "https://github.com/regexident/cargo-modules"
keywords = ["cargo", "plugin", "module", "mod", "tree"]
license = "MPL-2.0"
edition = "2021"
name = "cargo-modules"
readme = "README.md"
repository = "https://github.com/regexident/cargo-modules"
rust-version = "1.76.0"
version = "0.15.5"

[dependencies]

# required by lib
bitvec = "1.0"
json = "0.12.4"
petgraph = "0.6.4"
anyhow = "1.0.82"
yansi = "1.0.1"
log = "0.4.21"
env_logger = "0.11.3"
indoc = "2.0.5"
clap = { version = "4.5.4", features = ["derive"] }
scopeguard = "1.2.0"

ra_ap_base_db = "=0.0.211"
ra_ap_cfg = "=0.0.211"
ra_ap_hir = "=0.0.211"
ra_ap_hir_def = "=0.0.211"
ra_ap_hir_ty = "=0.0.211"
ra_ap_ide = "=0.0.211"
ra_ap_ide_db = "=0.0.211"
ra_ap_load-cargo = "=0.0.211"
ra_ap_paths = "=0.0.211"
ra_ap_proc_macro_api = "=0.0.211"
ra_ap_project_model = "=0.0.211"
ra_ap_syntax = "=0.0.211"
ra_ap_text_edit = "=0.0.211"
ra_ap_vfs = "=0.0.211"

# minimal versions
wyz = "0.6.1"
pulldown-cmark = "0.11.0"
getopts = "0.2.21"
rust-analyzer-salsa = "0.17.0-pre.6"        # resolving rust-analyzer = "=0.0.189"
rust-analyzer-salsa-macros = "0.17.0-pre.6" # resolving rust-analyzer = "=0.0.189"

# security fixes
memoffset = "0.9.1"    #230
thread_local = "1.1.8" #231

# required by tests
[dev-dependencies]
assert_cmd = "2.0.14"
shellwords = "1.1"
insta = "1.38.0"
bitflags = "2.5.0"
