[package]
name = "modlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# required by lib
bitvec = "1.0"
json = "0.12.4"
petgraph = "0.6.4"
anyhow = "1.0.82"
yansi = "1.0.1"
log = "0.4.21"
env_logger = "0.11.3"
indoc = "2.0.5"
clap = { version = "4.5.7", features = ["derive"] }
scopeguard = "1.2.0"
dunce = "1.0.4"
sugar_path = "1.2.0"

ra_ap_base_db = "=0.0.230"
ra_ap_cfg = "=0.0.230"
ra_ap_hir = "=0.0.230"
ra_ap_hir_def = "=0.0.230"
ra_ap_hir_ty = "=0.0.230"
ra_ap_ide = "=0.0.230"
ra_ap_ide_db = "=0.0.230"
ra_ap_load-cargo = "=0.0.230"
ra_ap_paths = "=0.0.230"
ra_ap_proc_macro_api = "=0.0.230"
ra_ap_project_model = "=0.0.230"
ra_ap_syntax = "=0.0.230"
ra_ap_text_edit = "=0.0.230"
ra_ap_vfs = "=0.0.230"

# minimal versions
wyz = "0.6.1"
pulldown-cmark = "0.12.0"
getopts = "0.2.21"
rust-analyzer-salsa = "0.17.0-pre.6"        # resolving rust-analyzer = "=0.0.189"
rust-analyzer-salsa-macros = "0.17.0-pre.6" # resolving rust-analyzer = "=0.0.189"
libc = "0.2.155"

# security fixes
memoffset = "0.9.1"    #230
thread_local = "1.1.8" #231
